@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.8 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-controller.sh,v 1.9 2005/09/08 20:59:07 wolf31o2 Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 
@@ -10,6 +10,12 @@ case $1 in
 	build_packages)
 		shift
 		export clst_packages="$*"
+		if [ "${clst_livecd_type}" = "gentoo-release-livecd" ]
+		then
+			mkdir -p ${clst_chroot_path}/usr/livecd
+			echo "${clst_packages}" > \
+				${clst_chroot_path}/usr/livecd/grppkgs.txt
+		fi
 		exec_in_chroot ${clst_sharedir}/targets/${clst_target}/${clst_target}-chroot.sh
 		;;
 
